fix scroll overflow

--- a/src/pages/Home/components/ComponentTopRight.css
+++ b/src/pages/Home/components/ComponentTopRight.css
@@ -1,7 +1,10 @@
 .container_info_rightTop {
   display: flex;
   flex-direction: column;
-  padding: 12px;
+  padding-right: 16px;
+  padding-left: 16px;
+  padding-top: 8px;
+  padding-bottom: 16px;
   flex-grow: 1;
 }
 
@@ -15,7 +18,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-radius: 8px;
+  border-radius: 16px;
   background: rgba(39, 42, 51, 0.4);
   margin-bottom: 12px;
   padding-left: 16px;
@@ -28,7 +31,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-radius: 8px;
+  border-radius: 16px;
   padding-left: 16px;
   padding-right: 16px;
   padding-top: 8px;
@@ -41,7 +44,7 @@
   display: flex;
   flex-grow: 1;
   flex-direction: column;
-  border-radius: 8px;
+  border-radius: 16px;
   padding: 8px;
   background: rgba(39, 42, 51, 0.4);
 }
